--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -29,7 +29,7 @@
                 </nav> 
                 <div id="PageHeadingContent">
                     <div id="PageArticleDate">
-                        <f:format.date date="{date}" format="d. F Y" />
+                        {date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE')}
                     </div> 
                     <div id="PageArticleHeading">
                         <header>{header}</header>
