--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -3,13 +3,16 @@
 <!DOCTYPE html>
 <html>
     <head>
+	<f:section name="meta">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
+		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
+	</f:section>
 	<f:section name="stylesheets">
         	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Default.css', package: 'GSL.DuttweilerDe')}" />
-        <link rel="shortcut icon" type="image/x-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
+        	<link rel="shortcut icon" type="image/x-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
 	</f:section>
 
         <meta charset="utf-8" />
-        <meta name="author" content="Jan Syring-Lingenfelder www.jan-sl.de" />
         <title>Duttweiler/Pfalz</title>
 
 	<f:section name="headScripts">
