--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -26,48 +26,108 @@ a:hover {
 }
 
 #Wrapper {
-    width: 800px;
     margin: 0 auto;
     border: 2px solid #363;
+    position: relative;
+}
+@media screen and (min-width: 820px) {
+#Wrapper {
+    width: 800px;
+}
 }
 
 #PageHeading {
     background-image: url("../Images/b-logo-xxx.jpg");
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: bottom;
     border-top: 1px solid #363;
     height: 200px;
 }
+/* desktop, large enough tablets */
+@media screen and (min-width: 820px) {
+	#menuButton {
+		display: none;
+	}
+	#IndexPageTopMenu {
+	    height: 20px;
+	    margin-top: 180px;
+	    background-color: #363;
+	    font-size: 10pt;
+	    color: #fff;
+	    width: -webkit-fit-content;
+	    width: -moz-fit-content;
+	    width: fit-content;
+	}
 
-#IndexPageTopMenu {
-    height: 20px;
-    margin-top: 180px;
-    background-color: #363;
-    font-size: 10pt;
-    font-color: #fff;
-    width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-}
+	#IndexPageTopMenu a {
+	    color: #fff;
+	    text-decoration: none;
+	}
+	#IndexPageTopMenu a:hover {
+	    color: #363;
+	    background-color: #fff;
+	}
 
-#IndexPageTopMenu a {
-    color: #fff;
-    text-decoration: none;
-}
-#IndexPageTopMenu a:hover {
-    color: #363;
-    background-color: #fff;
-}
+	#IndexPageTopMenu ul {
+	    list-style-type: none;
+	    margin: 0;
+	    padding: 0;
+	}
 
-#IndexPageTopMenu ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+	#IndexPageTopMenu li {
+	    padding: 2px 5px;
+	    text-align: center;
+	    border-right: 1px solid white;
+	    display: inline;
+	}
 }
+/* smaller screens */
+@media screen and (max-width: 819px) {
+	#menuButton {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    display: inline-block;
+	    font-size: xx-large;
+	    background-color: #363;
+	}
+	#IndexPageTopMenu {
+	    position: absolute;
+	    top: 0;
+	    left: 0;
+	    background-color: #363;
+	    font-size: 10pt;
+	    color: #fff;
+	    width: -webkit-fit-content;
+	    width: -moz-fit-content;
+	    width: fit-content;
+	}
 
-#IndexPageTopMenu li {
-    padding: 2px 5px;
-    text-align: center;
-    border-right: 1px solid white;
-    display: inline;
+	#IndexPageTopMenu a {
+	    color: #fff;
+	    text-decoration: none;
+	}
+	#IndexPageTopMenu a:hover {
+	    color: #363;
+	    background-color: #fff;
+	}
+
+	#IndexPageTopMenu ul {
+	    list-style-type: square;
+	    margin: 0;
+	    width: -webkit-fit-content;
+	    width: -moz-fit-content;
+	    width: fit-content;
+	}
+
+	#IndexPageTopMenu li {
+	    padding: 2px 5px;
+	    text-align: center;
+	    width: -webkit-fit-content;
+	    width: -moz-fit-content;
+	    width: fit-content;
+	}
 }
 
 #FrontpageBanner {
@@ -82,10 +142,12 @@ a:hover {
     background-color: #fff;
 }
 
+@media screen and (min-width: 820px) {
 #NewsColumn, #RightColumn {
     width: 396px;
     float:left;
     padding: 2px;
+}
 }
 
 article.FrontpageNewsItem:nth-child(odd) {
