--- a/Resources/Public/Styles/Default.css
+++ b/Resources/Public/Styles/Default.css
@@ -142,10 +142,9 @@ a:hover {
     border-right: 1px solid black;
     display: inline-block;
 }
-@media screen and (min-width: 820px) {
 .ArticlePressespiegelItemInner {
-    width: 720px;
-}
+    width: 90%; /* fallback */
+    width: calc(100% - 40px);
 }
 
 .ArticlePressespiegelItemTitle {
@@ -155,12 +154,6 @@ a:hover {
     font-size: 8pt;
     float: right;
 }
-@media screen and  (max-width: 819px) {
-.ArticlePressespiegelItemDate {
-    margin-left: 20px;
-}
-}
-
 .ArticlePressespiegelItemLink {
     margin-left: 25px;
 }
