--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -14,10 +14,6 @@ body {
     height: 1px;
 }
 
-.typo3-neos-alignment-right { float: right; margin-left: 2em; margin-bottom: 1em; }
-.typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
-.typo3-neos-alignment-center { margin: 0 auto; }
-
 a {
     color: #363;
     text-decoration: none;
@@ -198,14 +194,6 @@ article.FrontpageNewsItem header {
     margin: 5px 0;
 }
 
-a {
-    color: #363;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
-
 #NewsColumnResponsiveHeading {
     display: none;
 }
@@ -225,3 +213,7 @@ a:hover {
     float: right;
     font-size: 8pt;
 }
+
+.typo3-neos-alignment-right { float: right; margin-left: 2em; margin-bottom: 1em; }
+.typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
+.typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
