--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -1,219 +1,67 @@
-body {
-    font-family: verdana, geneva, arial;
-    font-size: 10pt;
-    margin-top: 5px;
-    background-color: #fff;
-    background-image: url("../Images/back_gn.gif");
-    background-repeat: repeat-x;
-    line-height: 14pt;
-}
+body { font-family: verdana, geneva, arial; font-size: 10pt; margin-top: 5px; background-color: #fff; background-image: url("../Images/back_gn.gif"); background-repeat: repeat-x; line-height: 14pt; }
 
-.clearfix {
-    clear: both;
-    width: 100%;
-    height: 1px;
-}
+.clearfix { clear: both; width: 100%; height: 1px; }
 
-a {
-    color: #363;
-    text-decoration: none;
-}
-a:hover {
-    text-decoration: underline;
-}
+a { color: #363; text-decoration: none; }
+a:hover { text-decoration: underline; }
 
-#Wrapper {
-    margin: 0 auto;
-    border: 2px solid #363;
-    position: relative;
-}
+#Wrapper { margin: 0 auto; border: 2px solid #363; position: relative; }
 @media screen and (min-width: 820px) {
-#Wrapper {
-    width: 800px;
-}
+#Wrapper { width: 800px; }
 }
 
-#PageHeading {
-    background-image: url("../Images/b-logo-xxx.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: bottom;
-    border-top: 1px solid #363;
-    height: 200px;
-}
+#PageHeading { background-image: url("../Images/b-logo-xxx.jpg"); background-size: contain; background-repeat: no-repeat; background-position: bottom; border-top: 1px solid #363; height: 200px; }
+
 /* desktop, large enough tablets */
 @media screen and (min-width: 820px) {
-	#menuButton {
-		display: none;
-	}
-	#IndexPageTopMenu {
-	    height: 20px;
-	    margin-top: 180px;
-	    background-color: #363;
-	    font-size: 10pt;
-	    color: #fff;
-	    width: -webkit-fit-content;
-	    width: -moz-fit-content;
-	    width: fit-content;
-	}
-
-	#IndexPageTopMenu a {
-	    color: #fff;
-	    text-decoration: none;
-	}
-	#IndexPageTopMenu a:hover {
-	    color: #363;
-	    background-color: #fff;
-	}
-
-	#IndexPageTopMenu ul {
-	    list-style-type: none;
-	    margin: 0;
-	    padding: 0;
-	}
-
-	#IndexPageTopMenu li {
-	    padding: 2px 5px;
-	    text-align: center;
-	    border-right: 1px solid white;
-	    display: inline;
-	}
+	#menuButton { display: none; }
+	#IndexPageTopMenu { height: 20px; margin-top: 180px; background-color: #363; font-size: 10pt; color: #fff; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; }
+	#IndexPageTopMenu a { color: #fff; text-decoration: none; }
+	#IndexPageTopMenu a:hover { color: #363; background-color: #fff; }
+	#IndexPageTopMenu ul { list-style-type: none; margin: 0; padding: 0; }
+	#IndexPageTopMenu li { padding: 2px 5px; text-align: center; border-right: 1px solid white; display: inline; }
 }
+
 /* smaller screens */
 @media screen and (max-width: 819px) {
-	#menuButton {
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    display: inline-block;
-	    background-color: #363;
-	}
-	#IndexPageTopMenu {
-	    position: absolute;
-	    top: 0;
-	    left: 0;
-	    background-color: #363;
-	    font-size: 10pt;
-	    color: #fff;
-	    width: -webkit-fit-content;
-	    width: -moz-fit-content;
-	    width: fit-content;
-	}
-
-	#IndexPageTopMenu a {
-	    color: #fff;
-	    text-decoration: none;
-	}
-	#IndexPageTopMenu a:hover {
-	    color: #363;
-	    background-color: #fff;
-	}
-
-	#IndexPageTopMenu ul {
-	    list-style-type: square;
-	    margin: 0;
-	    width: -webkit-fit-content;
-	    width: -moz-fit-content;
-	    width: fit-content;
-	}
-
-	#IndexPageTopMenu li {
-	    padding: 2px 5px;
-	    text-align: center;
-	    width: -webkit-fit-content;
-	    width: -moz-fit-content;
-	    width: fit-content;
-	}
+	#menuButton { position: absolute; top: 0; left: 0; display: inline-block; background-color: #363; }
+	#IndexPageTopMenu { position: absolute; top: 0; left: 0; background-color: #363; font-size: 10pt; color: #fff; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; }
+	#IndexPageTopMenu a { color: #fff; text-decoration: none; }
+	#IndexPageTopMenu a:hover { color: #363; background-color: #fff; }
+	#IndexPageTopMenu ul { list-style-type: square; margin: 0; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; }
+	#IndexPageTopMenu li { padding: 2px 5px; text-align: center; width: -webkit-fit-content; width: -moz-fit-content; width: fit-content; }
 }
 
-#FrontpageBanner {
-    background-color: white;
-}
-#FrontpageBanner * {
-    margin: 0;
-    padding: 0;
-}
+#FrontpageBanner { background-color: white; }
+#FrontpageBanner * { margin: 0; padding: 0; }
 
-#PageBody {
-    background-color: #fff;
-}
+#PageBody {background-color: #fff; }
 
 @media screen and (min-width: 820px) {
-#NewsColumn, #RightColumn {
-    width: 396px;
-    float:left;
-    padding: 2px;
-}
+#NewsColumn, #RightColumn { width: 396px; float:left; padding: 2px; }
 }
 
-article.FrontpageNewsItem:nth-child(odd) {
-    background-color: #eee;
-}
-article.FrontpageNewsItem {
-    padding: 5px !important;
-}
+article.FrontpageNewsItem:nth-child(odd) { background-color: #eee; }
+article.FrontpageNewsItem { padding: 5px !important; }
+article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11pt; }
+.NewsItemDate { color: #808080; font-size: 8pt; padding: 2px 0; }
+.NewsItemSubheading { font-weight: bold; font-size: 9pt; }
+.NewsItemBody { font-size: 9pt; }
 
-article.FrontpageNewsItem header {
-    color: #363;
-    font-weight: bold;
-    font-size: 11pt;
-}
+#RightColumn .InfoBoxHeading { background-color: #363; padding: 4px; color: #fff; font-weight: bold; }
+#RightColumn .InfoBoxImportant { background-color: #F00 !important; }
+#RightColumn .InfoBoxBody { padding: 4px; border: 2px solid black; border-top: none; }
+.RightColumnInfoBox { margin: 5px 0; }
 
-.NewsItemDate {
-    color: #808080;
-    font-size: 8pt;
-    padding: 2px 0;
-}
-
-.NewsItemSubheading {
-    font-weight: bold;
-    font-size: 9pt;
-}
-.NewsItemBody {
-    font-size: 9pt;
-}
-
-#RightColumn .InfoBoxHeading {
-    background-color: #363;
-    padding: 4px;
-    color: #fff;
-    font-weight: bold;
-}
-
-#RightColumn .InfoBoxImportant {
-    background-color: #F00 !important;
-}
-
-#RightColumn .InfoBoxBody {
-    padding: 4px;
-    border: 2px solid black;
-    border-top: none;
-}
-
-.RightColumnInfoBox {
-    margin: 5px 0;
-}
-
-#NewsColumnResponsiveHeading {
-    display: none;
-}
-
+#NewsColumnResponsiveHeading { display: none; }
 @media screen and (max-width: 819px) {
-#NewsColumnResponsiveHeading {
-    display: block;
-    background-color: #363;
-    padding: 4px;
-    color: #fff;
-    font-weight: bold;
+#NewsColumnResponsiveHeading { display: block; background-color: #363; padding: 4px; color: #fff; font-weight: bold; }
 }
-}
-
-.NewsColumnToggle {
-    font-weight: normal;
-    float: right;
-    font-size: 8pt;
-}
+.NewsColumnToggle { font-weight: normal; float: right; font-size: 8pt; }
 
 .typo3-neos-alignment-right { float: right; margin-left: 2em; margin-bottom: 1em; }
 .typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
 .typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
+
+.EventListItem { margin: 10px 0; }
+.EventListItemTitle { font-weight: bold; }
