--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -64,4 +64,5 @@ article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11
 .typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
 
 .EventListItem { margin: 10px 0; }
-.EventListItemTitle { font-weight: bold; }
+.EventListItemTitle { font-weight: bold; font-size: 11pt; }
+.fa { padding-right: 5px; }
