--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -1,4 +1,4 @@
-body { font-family: verdana, geneva, arial; font-size: 10pt; margin-top: 5px; background-color: #fff; background-image: url("../Images/back_gn.gif"); background-repeat: repeat-x; line-height: 14pt; }
+body { font-family: verdana, geneva, arial; font-size: 9pt; margin-top: 5px; background-color: #fff; background-image: url("../Images/back_gn.gif"); background-repeat: repeat-x; line-height: 14pt; }
 
 .clearfix { clear: both; width: 100%; height: 1px; }
 
@@ -63,6 +63,6 @@ article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11
 .typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
 .typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
 
-.EventListItem { margin: 10px 0; }
-.EventListItemTitle { font-weight: bold; font-size: 11pt; }
+.EventListItem { margin: 5px 0; }
+.EventListItemTitle { font-weight: bold; }
 .fa { padding-right: 5px; }
