change date rendering on default pages and FrontpageNewsItem

--- a/Resources/Private/Templates/NodeTypes/FrontpageNewsItem.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageNewsItem.html
@@ -2,7 +2,7 @@
 {namespace media=TYPO3\Media\ViewHelpers}
 <article class="FrontpageNewsItem">
 	<header>{headline}</header>
-	<div class="NewsItemDate">{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE')}</div>
+	<div class="NewsItemDate">{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}</div>
 	<div class="NewsItemSubheading">{subheadline}</div>
 	<div class="NewsItemBody">
         <f:if condition="{image}">
