--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -33,7 +33,7 @@
                 </nav> 
                 <div id="PageHeadingContent">
                     <div id="PageArticleDate">
-                        {date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE')}
+                        {date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE', localeFormatLength: 'long')}
                     </div> 
                     <div id="PageArticleHeading">
                         <header>{header}</header>
