--- a/Resources/Private/Templates/NodeTypes/Event.html
+++ b/Resources/Private/Templates/NodeTypes/Event.html
@@ -1,6 +1,20 @@
-<div class="EventListItem">
-	<div class="EventListItemTitle">{title}</div>
-	<f:if condition="{location}"> <div class="EventListItemLocation"><span class="fa fa-fw fa-map-marker"></span>{location}</div></f:if>
-	<f:if condition="{host}"> <div class="EventListItemHost"><span class="fa fa-fw fa-users"></span>{host}</div></f:if>
-	<f:if condition="{startDate}"> <div class="EventListItemDate"><span class="fa fa-fw fa-calendar"></span>{startDate -> f:format.date(format: 'd.m.y H:i')}<f:if condition="{endDate}"> - {endDate -> f:format.date(format: 'd.m.y H:i')}</f:if></f:if></div>
-</div>
+<f:if condition="{isInPromoter}">
+	<f:then> <f:render section="EventItemInPromoter" arguments="{title: title, location: location, host: host, startDate: startDate, endDate: endDate}" /> </f:then>
+	<f:else> <f:render section="EventItemStandalone" arguments="{title: title, location: location, host: host, startDate: startDate, endDate: endDate}" /> </f:else>
+</f:if>
+
+<f:section name="EventItemStandalone">
+	<div class="EventListItem">
+		<div class="EventListItemTitle">{title}</div>
+		rendering TBD
+	</div>
+</f:section>
+
+<f:section name="EventItemInPromoter">
+	<div class="EventListItem">
+		<div class="EventListItemTitle">{title}</div>
+		<f:if condition="{location}"> <div class="EventListItemLocation"><span class="fa fa-fw fa-map-marker"></span>{location}</div></f:if>
+		<f:if condition="{host}"> <div class="EventListItemHost"><span class="fa fa-fw fa-users"></span>{host}</div></f:if>
+		<f:if condition="{startDate}"> <div class="EventListItemDate"><span class="fa fa-fw fa-calendar"></span>{startDate -> f:format.date(format: 'd.m.Y H:i')}<f:if condition="{endDate}"> - {endDate -> f:format.date(format: 'd.m.Y H:i')}</f:if></f:if></div>
+	</div>
+</f:section>
