--- a/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
+++ b/Resources/Private/Templates/NodeTypes/FrontpageInfoBox.html
@@ -1,13 +1,6 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace ts=TYPO3\TypoScript\ViewHelpers}
 <div class="RightColumnInfoBox">
-	<f:if condition="{isImportant}">
-	<f:then>
-		<div class="InfoBoxHeading InfoBoxImportant">{neos:contentElement.editable(property: 'headline')}</div>
-	</f:then>
-	<f:else>
-		<div class="InfoBoxHeading">{neos:contentElement.editable(property: 'headline')}</div>
-	</f:else>
-	</f:if>
+	<div class="InfoBoxHeading <f:if condition="{isImportant}"> InfoBoxImportant </f:if>">{neos:contentElement.editable(property: 'title')}</div>
 	<div class="InfoBoxBody"><ts:render path="contentRenderer" context="{node: content}" /></div>
 </div>
