Add CSS class for TwoColumnContent

--- a/Resources/Public/Styles/Frontpage.css
+++ b/Resources/Public/Styles/Frontpage.css
@@ -63,6 +63,8 @@ article.FrontpageNewsItem header { color: #363; font-weight: bold; font-size: 11
 .typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
 .typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
 
+.typo3-neos-nodetypes-twocolumn div.column { width: 50%; margin: 0; float: left; }
+
 .EventListItem { margin: 5px 0; }
 .EventListItemTitle { font-weight: bold; }
 .fa { padding-right: 5px; }
