--- a/Resources/Public/Styles/Default.css
+++ b/Resources/Public/Styles/Default.css
@@ -43,6 +43,8 @@ a:hover { text-decoration: underline; }
 .typo3-neos-alignment-left { float: left; margin-right: 2em; margin-bottom: 1em; }
 .typo3-neos-alignment-center { margin: 0 auto !important; width: -moz-fit-content; width: -webkit-fit-content; width: fit-content; }
 
+.typo3-neos-nodetypes-twocolumn div.column { width: 50%; margin: 0; float: left; }
+
 .fa { padding-right: 5px; }
 
 .EventListItem { margin: 10px 0; }
