--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
 	</f:section>
 	<f:section name="stylesheets">
+        	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/normalize.css', package: 'GSL.DuttweilerDe')}" />
 	        <link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Frontpage.css', package: 'GSL.DuttweilerDe')}" />
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Common.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="shortcut icon" type="image/x-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
