--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -6,6 +6,7 @@
 		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
 	</f:section>
 	<f:section name="stylesheets">
+		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/jquery.fancybox.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/normalize.css', package: 'GSL.DuttweilerDe')}" />
 	        <link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Frontpage.css', package: 'GSL.DuttweilerDe')}" />
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Common.css', package: 'GSL.DuttweilerDe')}" />
@@ -15,6 +16,7 @@
 
 	<f:section name="headScripts">
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="{f:uri.resource(path: 'Scripts/jquery.fancybox.pack.js', package: 'GSL.DuttweilerDe')}"></script>   
 	</f:section>
     </head>
     <body>
@@ -51,6 +53,9 @@
 	<f:section name="bodyScripts">
 		<script type="text/javascript" src="{f:uri.resource(path: 'Scripts/FrontpageResponsive.js', package: 'GSL.DuttweilerDe')}"></script>
 		<script type="text/javascript">checkWindowSize();</script>
+		<script type="text/javascript">
+			jQuery('.typo3-neos-nodetypes-image a.lightbox, .typo3-neos-nodetypes-textwithimage a.lightbox').fancybox();
+		</script>
 	</f:section>
     </body>
 </html>
