Add title tag to fancybox

--- a/Resources/Private/Templates/NodeTypes/Partials/Image.html
+++ b/Resources/Private/Templates/NodeTypes/Partials/Image.html
@@ -11,12 +11,12 @@
 				<f:else>
 					<f:if condition="{image.originalImage}">
 						<f:then>
-							<a href="{f:uri.resource(resource: image.originalImage.resource)}" class="lightbox">
+							<a href="{f:uri.resource(resource: image.originalImage.resource)}" title="{title}" class="lightbox">
 								<media:image asset="{image}" alt="{alternativeText}" title="{title}" maximumWidth="{maximumWidth}" maximumHeight="{maximumHeight}" allowCropping="{allowCropping}" allowUpScaling="{allowUpScaling}" />
 							</a>
 						</f:then>
 						<f:else>
-							<a href="{f:uri.resource(resource: image.resource)}" class="lightbox">
+							<a href="{f:uri.resource(resource: image.resource)}" title="{title}" class="lightbox">
 								<media:image asset="{image}" alt="{alternativeText}" title="{title}" maximumWidth="{maximumWidth}" maximumHeight="{maximumHeight}" allowCropping="{allowCropping}" allowUpScaling="{allowUpScaling}" />
 							</a>
 						</f:else>
