move fancybox js in its own file

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -86,8 +86,6 @@
         </div>
 	</f:section>
 	<f:section name="bodyScripts">
-		<script type="text/javascript">
-			jQuery('.typo3-neos-nodetypes-image a.lightbox, .typo3-neos-nodetypes-textwithimage a.lightbox').fancybox();
-		</script>
+		<script src="{f:uri.resource(path: 'Scripts/main.js', package: 'GSL.DuttweilerDe')}"></script>
 	</f:section>
     </body>
