--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -53,9 +53,7 @@
 	<f:section name="bodyScripts">
 		<script type="text/javascript" src="{f:uri.resource(path: 'Scripts/FrontpageResponsive.js', package: 'GSL.DuttweilerDe')}"></script>
 		<script type="text/javascript">checkWindowSize();</script>
-		<script type="text/javascript">
-			jQuery('.typo3-neos-nodetypes-image a.lightbox, .typo3-neos-nodetypes-textwithimage a.lightbox').fancybox();
-		</script>
+		<script type="text/javascript" src="{f:uri.resource('path: 'Scripts/main.js', package: 'GSL.DuttweilerDe')}"></script>
 	</f:section>
     </body>
 </html>
