Add fancybox sprites

--- a/Resources/Private/Templates/Page/Default.html
+++ b/Resources/Private/Templates/Page/Default.html
@@ -8,7 +8,7 @@
 		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
 	</f:section>
 	<f:section name="stylesheets">
-		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/jquery.fancybox.css', package: 'GSL.DuttweilerDe')}" />
+		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/fancybox/jquery.fancybox.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/normalize.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Default.css', package: 'GSL.DuttweilerDe')}" />
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Common.css', package: 'GSL.DuttweilerDe')}" />
@@ -21,7 +21,7 @@
 
 	<f:section name="headScripts">
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-		<script src="{f:uri.resource(path: 'Scripts/jquery.fancybox.pack.js', package: 'GSL.DuttweilerDe')}"></script>        
+		<script src="{f:uri.resource(path: 'Scripts/fancybox/jquery.fancybox.pack.js', package: 'GSL.DuttweilerDe')}"></script>  
 	</f:section>
     </head>
     <body>
