--- a/Resources/Private/Templates/API/NewsItem.html
+++ b/Resources/Private/Templates/API/NewsItem.html
@@ -1,6 +1,7 @@
 {namespace neos=TYPO3\Neos\ViewHelpers}
 {namespace media=TYPO3\Media\ViewHelpers}
 {
+	"uid": "{uid}",
 	"headline": "{headline}",
 	"subheadline": "{subheadline}",
 	"date": "{date -> f:format.date(localeFormatType: 'date', forceLocale: 'de_DE')}",
