--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -4,6 +4,7 @@
 	<f:section name="meta">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=yes">
 		<meta name="author" content="Gerhard Syring-Lingenfelder (www.g-sl.de); Jan Syring-Lingenfelder (www.jan-sl.de)" />
+    <meta name="google-play-app" content="app-id=de.jan_sl.duttweiler.app" />
 	</f:section>
 	<f:section name="stylesheets">
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/fancybox/jquery.fancybox.css', package: 'GSL.DuttweilerDe')}" />
@@ -12,6 +13,8 @@
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Common.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="shortcut icon" type="image/x-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/jquery.smartbanner/jquery.smartbanner.css', package: 'GSL.DuttweilerDe')}" />
+    <link rel="apple-touch-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
 	</f:section>
 
 	<f:section name="headScripts">
@@ -23,7 +26,7 @@
 	<f:section name="body">
         <div id="Wrapper">
             <div id="PageHeading">
-		<div id="menuButton"><img src="{f:uri.resource(path: 'Images/menu_icon.svg', package: 'GSL.DuttweilerDe')}" height="30" width="30" alt="Menu" /></div>       
+		<div id="menuButton"><img src="{f:uri.resource(path: 'Images/menu_icon.svg', package: 'GSL.DuttweilerDe')}" height="30" width="30" alt="Menu" /></div>
                 <nav id="IndexPageTopMenu">
 			{parts.menu -> f:format.raw()}
                 </nav>
@@ -53,7 +56,18 @@
 	<f:section name="bodyScripts">
 		<script type="text/javascript" src="{f:uri.resource(path: 'Scripts/FrontpageResponsive.js', package: 'GSL.DuttweilerDe')}"></script>
 		<script type="text/javascript">checkWindowSize();</script>
-		<script type="text/javascript" src="{f:uri.resource('path: 'Scripts/main.js', package: 'GSL.DuttweilerDe')}"></script>
+    <script type="text/javascript" src="{f:uri.resource(path: 'Scripts/jquery.smartbanner/jquery.smartbanner.js', package: 'GSL.DuttweilerDe')}"></script>
+		<script type="text/javascript" src="{f:uri.resource(path: 'Scripts/main.js', package: 'GSL.DuttweilerDe')}"></script>
+    <script type="text/javascript">
+      $(function() {
+        $.smartbanner({
+          title: 'DuttweilerApp',
+          author: 'Jan Syring-Lingenfelder',
+          button: 'Installieren',
+          price: 'Kostenlos'
+        })
+      })
+    </script>
 	</f:section>
     </body>
 </html>
