--- a/Resources/Private/Templates/Page/Frontpage.html
+++ b/Resources/Private/Templates/Page/Frontpage.html
@@ -13,8 +13,9 @@
 		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Styles/Common.css', package: 'GSL.DuttweilerDe')}" />
         	<link rel="shortcut icon" type="image/x-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
 		<link rel="stylesheet" type="text/css" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/jquery.smartbanner/jquery.smartbanner.css', package: 'GSL.DuttweilerDe')}" />
-    <link rel="apple-touch-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
+		<link rel="stylesheet" type="text/css" href="{f:uri.resource(path: 'Scripts/jquery.smartbanner/jquery.smartbanner.css', package: 'GSL.DuttweilerDe')}" />
+		<link rel="apple-touch-icon" href="{f:uri.resource(path: 'Images/wappen.ico', package: 'GSL.DuttweilerDe')}" />
+		<link rel="alternate" type="application/rss+xml" title="RSS" href="/api/news.rss" />
 	</f:section>
 
 	<f:section name="headScripts">
